--- a/index.html
+++ b/index.html
@@ -19,109 +19,109 @@
     <div class="container">
 
         <div class="first_row">
-            <div onclick="choose('1')" class="letter">
+            <div id="1" onclick="choose('1')" class="letter">
                 1
         </div>
-        <div onclick="choose('2')" class="letter">
+        <div id="2" onclick="choose('2')" class="letter">
             2
         </div>
-        <div onclick="choose('3')" class="letter">
+        <div id="3" onclick="choose('3')" class="letter">
             3
         </div>
-        <div onclick="choose('4')" class="letter">
+        <div id="4" onclick="choose('4')" class="letter">
             4
         </div>
-        <div onclick="choose('5')" class="letter">
+        <div id="5" onclick="choose('5')" class="letter">
             5
         </div>
-        <div onclick="choose('6')" class="letter">
+        <div id="6" onclick="choose('6')" class="letter">
             6
         </div>
-        <div onclick="choose('7')" class="letter">
+        <div id="7" onclick="choose('7')" class="letter">
             7
         </div>
-        <div onclick="choose('8')" class="letter">
+        <div id="8" onclick="choose('8')" class="letter">
             8
         </div>
-        <div onclick="choose('9')" class="letter">
+        <div id="9" onclick="choose('9')" class="letter">
             9
         </div>
-        <div onclick="choose('0')" class="letter">
+        <div id="0" onclick="choose('0')" class="letter">
             0
         </div>
-        <div onclick="choose('ß')" class="letter">
+        <div id="ß" onclick="choose('ß')" class="letter">
             ß
         </div>
         </div>
 
         <div class="second_row">
-            <div onclick="choose('q')" class="letter">
+            <div id="q" onclick="choose('q')" class="letter">
                 q
         </div>
-        <div onclick="choose('w')" class="letter">
+        <div id="w" onclick="choose('w')" class="letter">
             w
         </div>
-        <div onclick="choose('e')" class="letter">
+        <div id="e" onclick="choose('e')" class="letter">
             e
         </div>
-        <div onclick="choose('r')" class="letter">
+        <div id="r" onclick="choose('r')" class="letter">
             r
         </div>
-        <div onclick="choose('t')" class="letter">
+        <div id="t" onclick="choose('t')" class="letter">
             t
         </div>
-        <div onclick="choose('z')" class="letter">
+        <div id="z" onclick="choose('z')" class="letter">
             z
         </div>
-        <div onclick="choose('u')" class="letter">
+        <div id="u" onclick="choose('u')" class="letter">
             u
         </div>
-        <div onclick="choose('i')" class="letter">
+        <div id="i" onclick="choose('i')" class="letter">
             i
         </div>
-        <div onclick="choose('o')" class="letter">
+        <div id="o" onclick="choose('o')" class="letter">
             o
         </div>
-        <div onclick="choose('p')" class="letter">
+        <div id="p" onclick="choose('p')" class="letter">
             p
         </div>
-        <div onclick="choose('ü')" class="letter">
+        <div id="ü" onclick="choose('ü')" class="letter">
             ü
         </div>
         </div>
 
         <div class="third_row">
-            <div onclick="choose('a')" class="letter">
+            <div id="a" onclick="choose('a')" class="letter">
                 a
             </div>
-            <div onclick="choose('s')" class="letter">
+            <div id="s" onclick="choose('s')" class="letter">
                 s
             </div>
-            <div onclick="choose('d')" class="letter">
+            <div id="d" onclick="choose('d')" class="letter">
                 d
             </div>
-            <div onclick="choose('f')" class="letter">
+            <div id="f" onclick="choose('f')" class="letter">
                 f
             </div>
-            <div onclick="choose('g')" class="letter">
+            <div id="g" onclick="choose('g')" class="letter">
                 g
             </div>
-            <div onclick="choose('h')" class="letter">
+            <div id="h" onclick="choose('h')" class="letter">
                 h
             </div>
-            <div onclick="choose('j')" class="letter">
+            <div id="j" onclick="choose('j')" class="letter">
                 j
             </div>
-            <div onclick="choose('k')" class="letter">
+            <div id="k" onclick="choose('k')" class="letter">
                 k
             </div>
-            <div onclick="choose('l')" class="letter">
+            <div id="l" onclick="choose('l')" class="letter">
                 l
             </div>
-            <div onclick="choose('ö')" class="letter">
+            <div id="ö" onclick="choose('ö')" class="letter">
                 ö
             </div>
-            <div onclick="choose('ä')" class="letter">
+            <div id="ä" onclick="choose('ä')" class="letter">
                 ä
             </div>
             <div id="del" onclick="delete_sym()" class="letter">
@@ -133,34 +133,34 @@
             <div id="bigger_symbol" onclick="bigger()" class="letter">
                 ^ 
             </div>
-            <div onclick="choose('y')" class="letter">
+            <div id="y" onclick="choose('y')" class="letter">
                 y
             </div>
-            <div onclick="choose('x')" class="letter">
+            <div id="x" onclick="choose('x')" class="letter">
                 x
             </div>
-            <div onclick="choose('c')" class="letter">
+            <div id="c" onclick="choose('c')" class="letter">
                 c
             </div>
-            <div onclick="choose('v')" class="letter">
+            <div id="v" onclick="choose('v')" class="letter">
                 v
             </div>
-            <div onclick="choose('b')" class="letter">
+            <div id="b" onclick="choose('b')" class="letter">
                 b
             </div>
-            <div onclick="choose('n')" class="letter">
+            <div id="n" onclick="choose('n')" class="letter">
                 n
             </div>
-            <div onclick="choose('m')" class="letter">
+            <div id="m" onclick="choose('m')" class="letter">
                 m
             </div>
-            <div onclick="choose(',')" class="letter">
+            <div id="," onclick="choose(',')" class="letter">
                 ,
             </div>
-            <div onclick="choose('.')" class="letter">
+            <div id="." onclick="choose('.')" class="letter">
                 .
             </div>
-            <div onclick="choose('-')" class="letter">
+            <div id="-" onclick="choose('-')" class="letter">
                 -
             </div>
         </div>
